# api-connectors

./: .gitignore
auto-generated/cpprest/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  auth_helpers.cpp  auth_helpers.h
auto-generated/cpprest/api/: InstrumentApi.cpp  InstrumentApi.h  OrderApi.cpp  OrderApi.h  PositionApi.h
auto-generated/cpprest/model/: APIKey.cpp  APIKey.h  Order.cpp  Order.h  OrderBookL2.cpp  OrderBookL2.h  Quote.cpp  Quote.h  X_any.cpp
auto-generated/cpprest/test/: CMakeLists.txt  main.cpp  test_auth_helpers.cpp
auto-generated/python/swagger_client/api/: order_api.py
